# DataStructures

./: CMakeLists.txt  a.out  main.c
heap/min_heap/: main.c  min_heap.c  min_heap.h
linked_list/: coding_problems.md  notes.md  theoritical_questions.md
linked_list/circular_linked_list/: circular_linked_list.c  circular_linked_list.h  list.c  list.h  main.c
linked_list/doubly_linked_list/: doubly_linked_list.c  doubly_linked_list.h  list.c  list.h  main.c  test.c
linked_list/singly_linked_list/: list.c  list.h  main.c  singly_linked_list.c  singly_linked_list.h
queue/: coding_problems.md  notes.md  theoritical_questions.md
queue/array_queue/: array_queue.c  array_queue.h  main.c  queue.c  queue.h
queue/linked_list_queue/: linked_list_queue.c  linked_list_queue.h  main.c  queue.c  queue.h
stack/: coding_problems.md  notes.md  theoritical_questions.md
stack/array_stack/: array_stack.c  array_stack.h  main.c  stack.c  stack.h
stack/linked_list_stack/: linked_list_stack.c  linked_list_stack.h  main.c  stack.c  stack.h
test/: test.h
tree/: coding_problems.md  notes.md  theoritical_questions.md  tree.c  tree.h
tree/binary_search_tree/: binary_search_tree.c  binary_search_tree.h  main.c
tree/tree/: main.c  tree.c  tree.h
